# sqlite-es

./: CHANGELOG.md  Cargo.toml  README.md  justfile  release.yml
.github/workflows/: audit.yml  ci.yml
migrations/: 20221114171845_init.sql
src/: cqrs.rs  error.rs  event_repository.rs  lib.rs  testing.rs  types.rs  view_repository.rs
tests/: lib.rs
